# QTip

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project.yml  qtip.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  ticket.md
.github/workflows/: ci.yml
docs/: Doxyfile
docs/doxygen/: Doxyfile
include/: qtip.h  queue.h  queue_config_template.h
scripts/: check_results.sh  run_build.sh  run_ccn.sh  run_docs.sh  run_linter.sh  run_unit_tests.sh  setup-dev-env.sh
source/: qtip.c  queue.c
test/: CMakeLists.txt  test_qtip.c  test_queue.c
test/options/: sanitizer.yml
